[fix] increase news detail link z-index

--- a/packages/af6passenger/Resources/Public/CSS/src/_modules.scss
+++ b/packages/af6passenger/Resources/Public/CSS/src/_modules.scss
@@ -58,6 +58,7 @@
                     content: "";
                     position: absolute;
                     inset: 0;
+                    z-index: 1;
                 }
 
                 &--icon {
@@ -77,6 +78,8 @@
 
                 transition: transform 0.25s ease-in-out;
             }
+
+            // TODO: Add missing image fallback
         }
     }
 }
